<resources>
    <string name="app_name">Parcial-Tests</string>
    <string name="add_new_product">Añadir un nuevo producto</string>
    <string name="product_name">Nombre del producto</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Precio</string>
    <string name="add_product">Añadir Producto</string>
    <string name="delete">Eliminar</string>
    <string name="delete_product">Eliminar producto</string>
    <string name="delete_products">Eliminar productos</string>
    <string name="are_you_sure_you_want_to_remove_this_product">¿Esta seguro de querer eliminar este producto?</string>
    <string name="are_you_sure_you_want_to_remove_all_products">¿Esta seguro de querer eliminar todos los productos?</string>
    <string name="yes_delete">Sí, eliminar</string>
    <string name="yes_delete_all">Sí, eliminar todos</string>
    <string name="no_cancel">No, cancelar</string>
    <string name="edit">Editar</string>
    <string name="delete_message">¿Desea eliminar el producto?</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_all_products">Borrar todos los productos</string>
    <string name="no_products_yet">Aún no hay productos</string>
    <string name="enter_the_product_name">Introduce el nombre del producto *</string>
    <string name="enter_the_product_description">Introduce la descripción del producto *</string>
    <string name="enter_the_product_quantity">Introduce la cantidad del producto *</string>
    <string name="enter_the_product_price">Introduce el precio del producto *</string>
    <string name="product_successfully_registered">Producto registrado correctamente</string>
    <string name="product_successfully_updated">Producto actualizado correctamente</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="edit_product">Editar producto</string>
    <string name="description">Descripción del producto</string>
    <string name="error_displaying_product_information">Error al mostrar la información del Producto</string>
    <string name="in_stock">En stock:</string>
    <string name="in_stock2">En stock</string>
    <string name="out_stock">Sin stock</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="limpiar_campos">Limpiar campos</string>
    <string name="enter_the_username">Introduce el nombre de usuario</string>
    <string name="enter_the_password">Introduce la contraseña</string>
    <string name="wrong_password">"Contraseña incorrecta"</string>
    <string name="wrong_username">"El usuario no está registrado"</string>
    <string name="user_registered">Usuario registrado correctamente</string>
    <string name="user_already_exists">El usuario ya se encuentra registrado</string>
</resources>