<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/DarkBlue"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/usuario"
            app:boxBackgroundColor="@color/SoftWhite"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/Red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_EmailL_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_user_icon"
                android:drawablePadding="6dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/contrase_a"
            app:boxBackgroundColor="@color/SoftWhite"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/black"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/Red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_user"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@drawable/password_toggle_custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_PasswordL_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawablePadding="6dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:paddingRight="25dp"
            android:paddingBottom="15dp"
            android:text="@string/ingresar"
            android:textSize="17sp"
            android:textStyle="italic"
            app:cornerRadius="10dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_pass" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/LightGrey"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:paddingRight="25dp"
            android:paddingBottom="15dp"
            android:text="@string/registrar_usuario"
            android:textSize="17sp"
            android:textStyle="italic"
            app:cornerRadius="10dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
